Bug 127192 - MailMerge via UNO hangs in certain situation
Summary: MailMerge via UNO hangs in certain situation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All Windows (All)
: medium normal
Assignee: Juergen Funk
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-28 07:26 UTC by Juergen Funk
Modified: 2019-10-17 13:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen Funk 2019-08-28 07:26:35 UTC
Steps for the bug (WollMux)

1. Externen Briefkopf open from the WollMux-sidebar
2. In the WollMux-Sidebar "Serienbrief" and Datenquelle -> Datei 
    Calc-File with adress open
3. In the WollMux-Sidebar Button "Drucken" in Dialog "Direkt Druck"
   Choose Printer "Microsoft Printer to PDF"
   Button "Los geht's"

Then LO hangs.

The Problem is wollmux has a own thread without a windows-message-pump (Message-Loop) but the print-driver want display a File-Save-Dialog.
Comment 1 Juergen Funk 2019-08-28 07:28:31 UTC
Here fixed https://gerrit.libreoffice.org/#/c/78170/2
Comment 2 Commit Notification 2019-08-28 12:24:45 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c16bfef0d51ad903defdb2bacb4550de481d3074%5E%21

tdf#127192 Printing in main thread

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Suraj 2019-08-28 14:23:38 UTC Comment hidden (spam)
Comment 4 Suraj 2019-08-28 14:26:29 UTC Comment hidden (spam)
Comment 5 Xisco Faulí 2019-09-30 11:25:43 UTC
A polite ping to Juergen Funk (CIB):
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks
Comment 6 Suraj 2019-10-17 13:37:49 UTC Comment hidden (spam)