tdf#127192 Printing in main thread

trac29045

the wollmux has change the dialogs form swing to the LO-Dialogs,
and when printig with MS-PDF then LO hang on this line.
The reason is wollmux run in it own thread, but this thread has
no win-message-pump, when the printer-driver would open the
FileSave-Dialog then it hangs, because the message-pump
is missing in this thread.

The swing has made it own win-message-pump for this
thread.

Reviewed-on: https://gerrit.libreoffice.org/78170
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
Reviewed-by: Juergen Funk (CIB) <juergen.funk_ml@cib.de>
Tested-by: Juergen Funk (CIB) <juergen.funk_ml@cib.de>
(cherry picked from commit c16bfef0d51ad903defdb2bacb4550de481d3074)

Change-Id: Ia5131464dcc5f166133a3302d29550e945dd1026